fix leaderboard spacing

--- a/client/src/components/LeaderBoard/LeaderBoard.scss
+++ b/client/src/components/LeaderBoard/LeaderBoard.scss
@@ -136,8 +136,10 @@
 
 }
 
-.odd-tr {
-  background-color:beige;
+.odd-tr-rank {
+  // background-color:beige;
+  background-color: white;
+
 }
 
 .winner {
