--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   min-width: 16rem;
-  width: 18vh;
+  width: 16vh;
   padding: 0.5 * $spacing 0;
   // height: 100%;
   // min-height:100%;
