--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -28,6 +28,12 @@
   height: 100%;
 }
 
+.content-leaderboard {
+  background-color: $content-background;
+  width: 100%;
+  height: 90vh;
+}
+
 // .layout {
 //   display: flex;
 //   width: 100%;
